# timetable-processor-poc

./: .gitignore  README.md  architecture.md  setup.md
src/processor/: pyproject.toml  setup.bat  setup.sh  timetable_data.db
src/processor/processor_engine/: __init__.py  __main__.py  database.py  main.py  models.py  ocr_extractor.py  parser.py  preprocessor.py  table_detector.py  utils.py
src/processor/scripts/: run.py
src/timetable-api/: package-lock.json  package.json
src/timetable-api/src/: index.ts
src/timetable-ui/: README.md  index.html  package-lock.json  package.json
src/timetable-ui/src/: App.css  App.tsx
src/timetable-ui/src/components/: CalendarView.tsx
